@@ -1,8 +1,5 @@
 package org.atatame.service.config;
 
-import org.atatame.common.result.Result;
-import org.atatame.service.filter.JwtAuthenticationFilter;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -14,12 +11,10 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 /*
@@ -76,9 +71,9 @@ public class SecurityConfig {
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 // 公开接口，无需认证
-                .requestMatchers( "/api/authenticate/**", "/webjars/**","/doc.html", "/v3/api-docs/**").permitAll()
+                .requestMatchers( "/api/authenticate/login", "/webjars/**","/doc.html", "/v3/api-docs/**").permitAll()
                     // WebSocket连接端点
-                .requestMatchers("/chat/**").permitAll()
+//                .requestMatchers("/chat/**").permitAll()
                 // 其他所有请求都需要认证
                 .anyRequest().authenticated()
             )
@@ -92,20 +87,20 @@ public class SecurityConfig {
 //            )
             .httpBasic(AbstractHttpConfigurer::disable);
 
-//        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        System.err.println("Security configuration applied");
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("https://*.example.com"));//指定请求来源
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));//指定请求方法
+        configuration.setAllowedOriginPatterns(List.of("http://localhost/**"));//指定请求来源
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));//指定请求方法
         configuration.setAllowedHeaders(List.of("*"));//允许哪些认证信息
         configuration.setAllowCredentials(true);//是否允许携带认证信息
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("*", configuration);//表示对何种控制器路径应用该cors配置
+        source.registerCorsConfiguration("/**", configuration);//表示对何种控制器路径应用该cors配置
         return source;
     }
 }
